:lipstick: Fix Footer alignment

--- a/front/src/components/Footer/Footer.scss
+++ b/front/src/components/Footer/Footer.scss
@@ -5,6 +5,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+  padding: 2rem;
   .footer-container {
     max-width: 1152px;
     margin: 0 auto;
@@ -20,7 +21,7 @@ footer {
     .footer-nav-item{
 
       display: inline-block;
-      padding: 2rem;
+      margin-right: 2rem;
       
       a{ 
 
